# zync

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
config/: app.rs
core/: core.rs  event.rs  mod.rs  widgets.rs
core/events/: input.rs  mod.rs  ui_update.rs
core/macros/: mod.rs  observe_error.rs
core/state/: manager.rs  mod.rs  state.rs
core/utils/: calculate.rs  mod.rs  poll.rs  reset_state.rs
lib/core/: core.rs  event.rs  widgets.rs
lib/core/events/: input.rs
lib/core/state/: manager.rs  state.rs
lib/internal/: forward_port.rs  handle_upload.rs  mod.rs  open_file.rs  session_store.rs
lib/p2p/: Cargo.toml
lib/p2p/src/: app.rs  common.rs  lib.rs  receiver.rs  sender.rs
lib/shared/: Cargo.toml
lib/shared/src/: lib.rs  state.rs
lib/tcp/client/: Cargo.toml
lib/tcp/client/methods/: get.rs  upload.rs
lib/tcp/client/src/: app.rs  init.rs  lib.rs
lib/tcp/client/utils/: get_ip.rs
lib/tcp/server/: Cargo.toml
lib/tcp/server/Threadpool/: thread.rs
lib/tcp/server/http/: get.rs  mod.rs  put.rs  storage.rs
lib/tcp/server/http/methods/: list.rs
lib/tcp/server/src/: app.rs  lib.rs
lib/tcp/server/storage/methods/: upload.rs
lib/tcp/server/tcp/: allowed_request.rs  mod.rs  tcp.rs
lib/widgets/: button.rs
lib_tcp/: Cargo.toml
lib_tcp/src/: app.rs  lib.rs  main.rs
screens/: connection_progress.rs  dashboard.rs  debug.rs  error.rs  help.rs  home.rs  host_type.rs  mod.rs  popup.rs  protocol_popup.rs  session.rs
src/: app.rs  lib.rs  main.rs
