[package]
name = "zync"
description = "An advanced CLI tool for transferring files through your terminal."
authors=["urizennnn"]
license="MIT"
readme ="README.md"
version = "0.0.1-alpha"
keywords = ["cli", "file-transfer", "zync"]
edition = "2021"

[workspace]
members = [
	"./lib/tcp/server/",
	"./lib/tcp/client/"
, "./lib/p2p/"]
resolver = "2"
[workspace.lints.rust]
unssafe_code = "forbid"

[lib]
path = "src/lib.rs"

[workspace.dependencies]
once_cell = "1.20.2"
serde = "1.0.217"
serde_json = "1.0.132"
whoami = "1.5.2"
tokio ={version="1.43.0", features=["full"]} 
reqwest = "0.12.12"
log = "0.4.22"
dirs = "6.0.0"

[dependencies]
log.workspace = true
serde.workspace = true
tokio.workspace = true
whoami.workspace = true
once_cell.workspace = true
serde_json.workspace = true
dirs.workspace = true
reqwest.workspace = true
better-panic = "0.3.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
derive_setters = "0.1.6"
dialoguer = "0.11.0"
human-panic = "2.0.2"
itertools = "0.14.0"
libc = "0.2.169"
lipsum = "0.9.1"
nanoid = "0.4.0"
open = "5.3.0"
rand = "0.8.5"
ratatui = "0.29.0"
strip-ansi-escapes = "0.2.0"
strum = "0.26.3"
style = "0.1.0"
tailwind = "0.1.0"
tui-big-text = "0.7.0"
tui-logger = "0.14.0"
tui-textarea = "0.7.0"
tui_confirm_dialog = "0.2.4"
unicode-width = "0.2.0"
futures = "0.3.31"

## workspace
tcp_server = { path = "./lib/tcp/server/" }
tcp_client = { path = "./lib/tcp/client/" }
ctrlc = "3.4.5"
rfd = "0.15.2"
chrono = "0.4.39"
