[package]
name = "zync"
description = "An advanced CLI tool for transferring files through your terminal."
authors=["urizennnn"]
license="MIT"
readme ="README.md"
version = "0.0.1-alpha"
keywords = ["cli", "file-transfer", "zync"]
edition = "2024"

[workspace]
members = [
	"./lib/tcp/server/",
	"./lib/tcp/client/"
, "./lib/p2p/"]
resolver = "2"
[workspace.lints.rust]
unssafe_code = "forbid"

[lib]
path = "src/lib.rs"



[workspace.dependencies]
once_cell = "1.21.1"
serde = "1.0.219"
serde_json = "1.0.140"
whoami = "1.5.2"
tokio ={version="1.44.1", features=["full"]} 
reqwest = "0.12.14"
log = "0.4.26"
socket2 = "0.5.8"
dirs = "6.0.0"
tokio-util = "0.7.14"
bytes = "1.10.1"
tokio-stream = "0.1.17"
futures-util = "0.3.31"


[dependencies]
log.workspace = true
serde.workspace = true
tokio.workspace = true
whoami.workspace = true
once_cell.workspace = true
serde_json.workspace = true
dirs.workspace = true
reqwest.workspace = true
better-panic = "0.3.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
derive_setters = "0.1.6"
dialoguer = "0.11.0"
human-panic = "2.0.2"
itertools = "0.14.0"
libc = "0.2.171"
lipsum = "0.9.1"
nanoid = "0.4.0"
open = "5.3.2"
rand = "0.8.5"
ratatui = "0.29.0"
strip-ansi-escapes = "0.2.1"
strum = "0.26.3"
style = "0.1.0"
tailwind = "0.1.0"
tui-big-text = "0.7.1"
tui-logger = "0.14.5"
tui-textarea = "0.7.0"
tui_confirm_dialog = "0.2.5"
unicode-width = "0.2.0"
futures = "0.3.31"
ctrlc = "3.4.5"
rfd = "0.15.3"
chrono = "0.4.40"
igd = "0.12.1"


## workspace
tcp_server = { path = "./lib/tcp/server/" }
tcp_client = { path = "./lib/tcp/client/" }
