[package]
name = "tcp_client"
description = "A library to house the core tcp logic"
authors = ["urizennnn"]
license = "MIT"
edition="2021"


[lib]
name ="tcp_client"
path = "src/lib.rs"

[dependencies]
log.workspace = true
serde.workspace = true
tokio.workspace = true
whoami.workspace = true
once_cell.workspace = true
serde_json.workspace = true
dirs.workspace = true
reqwest.workspace = true
chrono = "0.4.39"
simple_logger = "5.0.0"
