[package]
name = "tcp_server"
description = "A library to house the core tcp logic"
authors = ["urizennnn"]
license = "MIT"
edition="2021"

[lib]
name = "tcp_server"
path = "src/lib.rs"

[dependencies]
bytes = "1.6.1"
cargo-watch = "8.5.2"
log.workspace = true
serde.workspace = true
tokio.workspace = true
serde_json.workspace= true 
once_cell.workspace = true
dirs.workspace = true
socket2.workspace = true
igd = "0.12.1"

